# lab12

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: main.cpp
